--- a/index.html
+++ b/index.html
@@ -4,6 +4,115 @@
     <meta charset="UTF-8" />
     <title>多功能工具页面</title>
     <style>
+      /* 默认样式（浅色模式的备选） */
+      body {
+        background-color: #ffffff; /* 浅色背景 */
+        color: #000000; /* 深色文字 */
+        transition: background-color 0.5s, color 0.5s; /* 平滑过渡效果 */
+      }
+
+      /* 工具框样式 */
+      .tool-container {
+        background-color: #f8f9fa; /* 浅色模式工具框背景 */
+        padding: 20px;
+        border-radius: 8px;
+        transition: background-color 0.5s, color 0.5s;
+      }
+
+      /* 按钮样式 */
+      button {
+        background-color: #007bff; /* 浅色模式按钮背景 */
+        color: #ffffff; /* 浅色模式按钮文字 */
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        transition: background-color 0.3s, color 0.3s;
+      }
+
+      /* 深色模式 */
+      @media (prefers-color-scheme: dark) {
+        body {
+          background-color: #1e1e1e; /* 深色背景 */
+          color: #e0e0e0; /* 浅色文字 */
+        }
+
+        .tool-container {
+          background-color: #1e1e1e; /* 深色模式工具框背景 */
+          color: #e0e0e0; /* 浅色文字 */
+        }
+
+        .tool {
+          border: 1px solid #3c3c3c;
+          box-shadow: 0 2px 10px rgba(255, 255, 255, 0.1);
+        }
+
+        textarea {
+          background-color: #3c3c3c; /* 深色背景 */
+          color: #e0e0e0; /* 浅色文字 */
+          border: 1px solid #3c3c3c; /* 深色边框 */
+        }
+
+        .notification {
+          background-color: rgba(0, 123, 255, 0.8); /* 蓝色提示框，80% 不透明 */
+        }
+
+        .sidebar {
+          background-color: #252526;
+          color: white;
+        }
+
+        .sidebar button {
+          color: white;
+          border: 1px solid #3c3c3c;
+        }
+
+        .sidebar button:hover {
+          background-color: #34495e;
+        }
+
+        .sidebar h2 {
+          border-bottom: 1px solid #3c3c3c;
+        }
+      }
+
+      /* 浅色模式 */
+      @media (prefers-color-scheme: light) {
+        body {
+          background-color: #f8f9fa; /* 浅色背景 */
+          color: #000000; /* 深色文字 */
+        }
+        .tool-container {
+          background-color: #f8f9fa; /* 浅色模式工具框背景 */
+          color: #000000; /* 深色文字 */
+        }
+        .tool {
+          border: 1px solid #ccc;
+          box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+        }
+        textarea {
+          background-color: #ffffff; /* 浅色背景 */
+          color: #000000; /* 深色文字 */
+          border: 1px solid #ccc; /* 浅色边框 */
+        }
+        .notification {
+          background-color: rgba(40, 167, 69, 0.8); /* 绿色提示框，80% 不透明 */
+        }
+        .sidebar {
+          background-color: #ebebeb;
+          color: black;
+        }
+        .sidebar button {
+          color: black;
+          border: 1px solid #ccc;
+        }
+        .sidebar button:hover {
+          background-color: #e5e1df;
+        }
+        .sidebar h2 {
+          border-bottom: 1px solid #ccc;
+        }
+      }
       body {
         margin: 0;
         font-family: Arial, sans-serif;
@@ -13,8 +122,6 @@
       }
       .sidebar {
         width: 200px;
-        background-color: #2c3e50;
-        color: white;
         display: flex;
         flex-direction: column;
       }
@@ -22,20 +129,14 @@
         margin: 0;
         padding: 20px;
         text-align: center;
-        border-bottom: 1px solid #34495e;
       }
       .sidebar button {
         padding: 15px 20px;
         background: none;
         border: none;
-        color: white;
         text-align: left;
         cursor: pointer;
-        border-bottom: 1px solid #34495e;
         transition: background 0.2s;
-      }
-      .sidebar button:hover {
-        background-color: #34495e;
       }
       .content {
         flex: 1;
@@ -53,10 +154,7 @@
         max-width: 600px;
         margin: 0 auto;
         padding: 20px;
-        border: 1px solid #ccc;
         border-radius: 10px;
-        background-color: white;
-        box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
         text-align: center;
       }
       textarea {
@@ -65,7 +163,6 @@
         margin-bottom: 10px;
         padding: 10px;
         font-size: 14px;
-        border: 1px solid #ccc;
         border-radius: 5px;
         resize: none;
       }
@@ -104,27 +201,44 @@
         opacity: 1;
       }
       .copy-button:hover {
-        background-color: #218838;
+        background-color: rgba(40, 167, 69, 0.8); /* 绿色背景，80% 不透明度 */
+      }
+      .notification {
+        position: fixed;
+        top: 10px;
+        right: 20px;
+        padding: 10px 20px;
+        background-color: rgba(40, 167, 69, 0.8); /* 绿色背景，80% 不透明度 */
+        color: white;
+        border-radius: 5px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+        opacity: 0;
+        transition: opacity 0.5s ease-in-out;
+        z-index: 1000;
+      }
+      .notification.show {
+        display: block;
+        opacity: 1;
       }
     </style>
   </head>
   <body>
     <div class="sidebar">
       <h2>工具菜单</h2>
-      <button onclick="showTool('newlineTool')">换行符文本转换工具</button>
-      <button onclick="showTool('jsonTool')">JSON 格式化与压缩工具</button>
-      <button onclick="showTool('base64Tool')">Base64 编码解码工具</button>
+      <button onclick="showTool('newlineTool')">换行符文本转换</button>
+      <button onclick="showTool('jsonTool')">JSON 格式化与压缩</button>
+      <button onclick="showTool('base64Tool')">Base64 编码解码</button>
     </div>
     <div class="content">
       <!-- 换行符文本转换工具 -->
       <div id="newlineTool" class="tool-container active">
         <!-- 默认显示此工具 -->
         <div class="tool">
-          <h2>换行符文本转换工具</h2>
+          <h2>换行符文本转换</h2>
           <textarea id="inputText" placeholder="输入文本..."></textarea>
           <br />
-          <button onclick="convertToNewlines()">换行符转换为换行</button>
-          <button onclick="convertToSymbols()">换行转换为换行符</button>
+          <button onclick="convertToNewlines()">转成多行</button>
+          <button onclick="convertToSymbols()">转成单行</button>
           <div class="output-container">
             <textarea
               id="outputText"
@@ -141,11 +255,11 @@
       <!-- JSON 格式化与压缩工具 -->
       <div id="jsonTool" class="tool-container">
         <div class="tool">
-          <h2>JSON 格式化与压缩工具</h2>
+          <h2>JSON 格式化与压缩</h2>
           <textarea id="inputJson" placeholder="输入 JSON..."></textarea>
           <br />
-          <button onclick="formatJson()">格式化 JSON</button>
-          <button onclick="compressJson()">压缩 JSON</button>
+          <button onclick="formatJson()">JSON 格式化</button>
+          <button onclick="compressJson()">JSON 压缩</button>
           <div class="output-container">
             <textarea
               id="outputJson"
@@ -168,8 +282,8 @@
             placeholder="输入文本或 Base64 编码..."
           ></textarea>
           <br />
-          <button onclick="encodeBase64()">编码为 Base64</button>
-          <button onclick="decodeBase64()">解码 Base64</button>
+          <button onclick="encodeBase64()">Base64 编码</button>
+          <button onclick="decodeBase64()">Base64 解码</button>
           <div class="output-container">
             <textarea
               id="outputBase64"
@@ -184,6 +298,11 @@
             </button>
           </div>
         </div>
+      </div>
+
+      <!-- 添加复制成功的提示框 -->
+      <div id="copyNotification" class="notification" style="display: none">
+        复制成功！
       </div>
     </div>
 
@@ -239,7 +358,21 @@
         output.select();
         output.setSelectionRange(0, 99999);
         document.execCommand("copy");
-        alert("复制成功！");
+
+        // 显示非阻塞的复制成功提示
+        showCopyNotification();
+      }
+
+      function showCopyNotification() {
+        const notification = document.getElementById("copyNotification");
+        notification.style.display = "block"; // 确保元素被显示
+        notification.classList.add("show");
+
+        // 2秒后隐藏提示
+        setTimeout(() => {
+          notification.classList.remove("show");
+          setTimeout(() => (notification.style.display = "none"), 500); // 0.5秒后隐藏元素
+        }, 2000);
       }
 
       function encodeBase64() {
